Ensured that videos will autoplay on mobile (#29)

--- a/style/Page/_Home.scss
+++ b/style/Page/_Home.scss
@@ -34,13 +34,6 @@
   .VideoSmall {
     width: 100%;
     margin: $padding-xxl auto;
-    background: $app-accent;
-
-    &:after {
-      content: '';
-      display: block;
-      padding-bottom: 100%;
-    }
   }
 
   .Blurb {
@@ -127,7 +120,6 @@
 
     .VideoLarge {
       display: block;
-      height: 75%;
     }
 
     .VideoSmall {
